feat(phase11): maintenance mode, rejoin offer, ready visual, Ph7 pattern reorder
- Maintenance mode: /skgame maintenance [on|off|status] (skgame.admin permission)
  - Blocks startGame() when on; sends session.start.maintenance to lobby members
  - Gates multi-round auto-restart in endGame(); sends session.maintenance.round-ending
  - ExprMaintenanceMode boolean GET/SET expression: '[server] maintenance [mode]'
  - Registered in CORE_SKRIPT_CLASSES

- Rejoin after disconnect: RejoinSnapshot stored on PlayerQuitEvent when role=PLAYER
  and state=STARTING/STARTED; PlayerJoinEvent sends clickable offer after 40t delay;
  /game rejoin <session-id> as manual fallback; window-seconds configurable

- Ready visual: replace invisible Enchantment.UNBREAKING glow with ✓/✗ unicode
  prefix in player head name (green/red); remove applyGlow param from buildPlayerHead

- Phase 7 pattern reorder: statistics expressions now use %minigame% type instead of
  %string% id, word order changed to 'X of player in [minigame] Y' idiom;
  removes temporary debug log from ExprPlayerWinCount; removes DEBUG-SkGame log spam
  from loadAllSkriptClasses

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>